<resources>
    <string name="app_name">Laboratorio04</string>
    <string name="title_activity_main2">Reservalo.com</string>
    <string name="activity_listar_departamentos">Departamentos</string>
    <string name="activity_alta_reserva">Reservar Departamento</string>
    <string name="activity_listar_reservas">Reservas</string>

    <string name="navigation_drawer_open">Mostrar Opciones</string>
    <string name="navigation_drawer_close">Ocultar Opciones</string>

    <string name="action_settings">Configuracion</string>
    <string name="title_activity_settings">Perfil</string>


    <string name="pref_title_user">Nombre de usuario</string>
    <string name="pref_default_user">Usuario</string>

    <string name="pref_title_email">Correo electrónico</string>
    <string name="pref_default_email">email@email.com</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
