<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_user"
        android:inputType="textCapWords"
        android:key="usuario"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_user" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_email"
        android:inputType="textCapWords"
        android:key="email"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_email" />

    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:key="tono_notificacion"
        android:ringtoneType="notification"
        android:title="@string/pref_title_ringtone" />

</PreferenceScreen>